// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-component should build project 1`] = `"cmd: npm run,build {\\"cwd\\":\\"<CLI_DIR>/.test-output/test-react-component\\"}"`;

exports[`react-component should build project 2`] = `
"stdoutDump:

> @rexlabs/test-react-component@1.0.0 build <CLI_DIR>/.test-output/test-react-component
> plz build


 -:  p l z   b u i l d  :-

"
`;

exports[`react-component should build project 3`] = `
"stderrDump:
✔ Built bundles.
"
`;

exports[`react-component should build project 4`] = `
Array [
  "index.js",
  "test-react-component.js",
]
`;

exports[`react-component should clean project 1`] = `"cmd: npm run,clean {\\"cwd\\":\\"<CLI_DIR>/.test-output/test-react-component\\"}"`;

exports[`react-component should clean project 2`] = `
"stdoutDump:

> @rexlabs/test-react-component@1.0.0 clean <CLI_DIR>/.test-output/test-react-component
> plz clean


 -:  p l z   c l e a n  :-

"
`;

exports[`react-component should clean project 3`] = `
"stderrDump:
✔ Cleaned.
"
`;

exports[`react-component should create project 1`] = `"cmd: <CLI_DIR>/index.js create,test-react-component,<CLI_DIR>/.test-output {}"`;

exports[`react-component should create project 2`] = `
"stdoutDump:

 -:  p l z   c r e a t e  :-

"
`;

exports[`react-component should create project 3`] = `
"stderrDump:
✔ Fetched scaffold metadata
✔ Generated 'React Component': .test-output/test-react-component
"
`;

exports[`react-component should create project 4`] = `
Array [
  "package.json",
  "readme.md",
  "src",
]
`;

exports[`react-component should install deps in project 1`] = `"cmd: yarn install,--ignore-scripts,--no-progress {\\"cwd\\":\\"<CLI_DIR>/.test-output/test-react-component\\"}"`;

exports[`react-component should install deps in project 2`] = `
"stdoutDump:
"
`;

exports[`react-component should install deps in project 3`] = `
"stderrDump:
warning babel-plugin-inferno@1.7.0: All versions before 3.x are deprecated!
warning babel-preset-es2016@6.22.0: We're really excited that you're trying to use ES2016 syntax, but instead of making more yearly presets, Babel has a better preset that we recommend you use instead: npm install babel-preset-env --save-dev. Give us a follow @babeljs to get more updates
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
warning \\"@storybook/addon-storyshots@3.2.8\\" has incorrect peer dependency \\"@storybook/addons@^3.2.6\\".
warning \\"@storybook/addon-storyshots@3.2.8\\" has incorrect peer dependency \\"@storybook/channels@^3.2.0\\".
warning \\"@storybook/addon-storyshots@3.2.8\\" has incorrect peer dependency \\"@storybook/react@^3.2.8\\".
warning \\"@storybook/addon-storyshots@3.2.8\\" has incorrect peer dependency \\"babel-core@^6.25.0\\".
<UNMET PEER DEP WARNING>
warning \\"@storybook/addon-storyshots@3.2.8\\" has incorrect peer dependency \\"react-test-renderer@*\\".
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
warning \\"glob-loader@0.3.0\\" has incorrect peer dependency \\"glob@*\\".
warning \\"html-webpack-plugin@2.30.1\\" has incorrect peer dependency \\"webpack@1 || ^2 || ^2.1.0-beta || ^2.2.0-rc || ^3\\".
warning \\"html-webpack-plugin@2.28.0\\" has incorrect peer dependency \\"webpack@1 || ^2 || ^2.1.0-beta || ^2.2.0-rc\\".
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
warning \\"stats-webpack-plugin@0.6.1\\" has incorrect peer dependency \\"webpack@^1.0||^2.1.0-beta||^2.2.0-rc\\".
warning \\"storybook-readme@3.0.6\\" has incorrect peer dependency \\"@storybook/addons@^3.0.0-alpha.0\\".
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
warning \\"babel-loader@7.1.2\\" has incorrect peer dependency \\"babel-core@6 || 7 || ^7.0.0-alpha || ^7.0.0-beta || ^7.0.0-rc\\".
warning \\"babel-loader@7.1.2\\" has incorrect peer dependency \\"webpack@2 || 3\\".
warning \\"babel-loader@6.2.10\\" has incorrect peer dependency \\"babel-core@^6.0.0\\".
warning \\"babel-loader@6.2.10\\" has incorrect peer dependency \\"webpack@1 || 2 || ^2.1.0-beta || ^2.2.0-rc\\".
warning \\"react-datetime@2.10.1\\" has incorrect peer dependency \\"moment@>=2.16.0\\".
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
warning \\"babel-preset-react-app@3.0.2\\" has incorrect peer dependency \\"babel-runtime@^6.23.0\\".
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
warning \\"glamorous@4.8.0\\" has incorrect peer dependency \\"glamor@>=2\\".
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
warning \\"url-loader@0.5.9\\" has incorrect peer dependency \\"file-loader@*\\".
warning \\"url-loader@0.5.7\\" has incorrect peer dependency \\"file-loader@*\\".
warning \\"webpack-dev-middleware@1.12.0\\" has incorrect peer dependency \\"webpack@^1.0.0 || ^2.0.0 || ^3.0.0\\".
warning \\"webpack-dev-middleware@1.9.0\\" has incorrect peer dependency \\"webpack@1 || ^2.1.0-beta || ^2.2.0-rc.0\\".
warning \\"karma-mocha-reporter@2.2.2\\" has incorrect peer dependency \\"karma@>=0.13\\".
warning \\"karma-phantomjs-launcher@1.0.2\\" has incorrect peer dependency \\"karma@>=0.9\\".
warning \\"karma-webpack@2.0.1\\" has incorrect peer dependency \\"webpack@^1.1.0 || ^2 || ^2.1.0-beta.0 || ^2.2.0-rc.0\\".
warning \\"extract-text-webpack-plugin@2.1.0\\" has incorrect peer dependency \\"webpack@^2.2.0\\".
warning \\"npm-install-webpack2-plugin@4.1.0\\" has incorrect peer dependency \\"webpack@^1.12.0 || ^2.1.0-beta.0 || ^2.1.0\\".
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
warning \\"ajv-keywords@2.1.0\\" has incorrect peer dependency \\"ajv@>=5.0.0\\".
warning \\"ajv-keywords@1.5.1\\" has incorrect peer dependency \\"ajv@>=4.10.0\\".
warning \\"uglifyjs-webpack-plugin@0.4.6\\" has incorrect peer dependency \\"webpack@^1.9 || ^2 || ^2.1.0-beta || ^2.2.0-rc || ^3.0.0\\".
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
<UNMET PEER DEP WARNING>
warning Ignored scripts due to flag.
"
`;

exports[`react-component should link current cli into project 1`] = `"cmd: yarn unlink {\\"cwd\\":\\"<CLI_DIR>\\"}"`;

exports[`react-component should link current cli into project 2`] = `
"stdoutDump:
"
`;

exports[`react-component should link current cli into project 3`] = `
"stderrDump:
"
`;

exports[`react-component should link current cli into project 4`] = `"cmd: yarn link {\\"cwd\\":\\"<CLI_DIR>\\"}"`;

exports[`react-component should link current cli into project 5`] = `
"stdoutDump:
"
`;

exports[`react-component should link current cli into project 6`] = `
"stderrDump:
"
`;

exports[`react-component should link current cli into project 7`] = `"cmd: yarn link,@rexlabs/plz-cli {\\"cwd\\":\\"<CLI_DIR>/.test-output/test-react-component\\"}"`;

exports[`react-component should link current cli into project 8`] = `
"stdoutDump:
"
`;

exports[`react-component should link current cli into project 9`] = `
"stderrDump:
"
`;

exports[`react-component should run valid test in project 1`] = `"cmd: npm run,test {\\"cwd\\":\\"<CLI_DIR>/.test-output/test-react-component\\"}"`;

exports[`react-component should run valid test in project 2`] = `
"stdoutDump:

> @rexlabs/test-react-component@1.0.0 test <CLI_DIR>/.test-output/test-react-component
> plz test


 -:  p l z   t e s t  :-

  console.warn ../../../../node_modules/react/lib/lowPriorityWarning.js:40
    Warning: Accessing createClass via the main React package is deprecated, and will be removed in React v16.0. Use a plain JavaScript class instead. If you're not yet ready to migrate, create-react-class v15.* is available on npm as a temporary, drop-in replacement. For more info see https://fb.me/react-create-class

  console.warn node_modules/@storybook/react/dist/client/preview/client_api.js:71
    Missing 'module' parameter for story with a kind of 'TestReactComponent'. It will break your HMR

"
`;

exports[`react-component should run valid test in project 3`] = `
"stderrDump:
fallbackLoader option has been deprecated - replace with \\"fallback\\"
loader option has been deprecated - replace with \\"use\\"
fallbackLoader option has been deprecated - replace with \\"fallback\\"
loader option has been deprecated - replace with \\"use\\"
 PASS  src/__tests__/storyshots.js (<TIMESTAMP>)
  Storyshots
    TestReactComponent
      ✓ default (<TIMESTAMP>)

Snapshot Summary
 › 1 snapshot written in 1 test suite.

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   1 added, 1 total
Time:        <TIMESTAMP>, estimated <TIMESTAMP>
Ran all test suites.
"
`;
